Added managemend of Units, Brand and categories of fodd to the database and int the code
All deletions aren't tested yet
Insertions are only partially tested

GlucoMan Project Changes:
- `GlucoManCreates_SQLite.sql`
- Added the `CategoriesOfFood` table.
- Changes to the `Foods`, `Alarms`, and `BolusCalculations` tables.
- Removed obsolete commands and added new insert commands.

- `FoodPage.xaml.cs`
- Added a `try-catch` block for managing food categories.
- Updated the handling of units of measurement with `UnitOfFood`.

- `FoodsPage.xaml.cs`
- Updated the creation of `Food` objects to use `UnitOfFood`.

- `BL_MealAndFood.cs`
- Changes to support `UnitOfFood` and `CategoryOfFood` and updated methods for managing units and categories.

- `CategoryOfFood.cs`
- Added the `Description` property to improve category descriptions.

- `Unit.cs`
- Removed the `Unit` class and introduced `UnitOfFood` with new properties.

- `DataLayer.cs`
- Updated function declarations to handle new food categories and units.

- `Sqlite_SqlToCreateDatabase.cs`
- Updated SQL statements to reflect new tables and existing changes.

--- a/GlucoMan.Maui/FoodPage.xaml
+++ b/GlucoMan.Maui/FoodPage.xaml
@@ -191,7 +191,7 @@
                    TextChanged="txtCategory_TextChanged" HorizontalTextAlignment="Start"/>
             <Picker Grid.Row="19" Grid.Column="2" Grid.ColumnSpan="1"
                     x:Name="cmbCategory" 
-                    ToolTipProperties.Text="List of filtered categories"
+                    ToolTipProperties.Text="List of categories of food"
                     VerticalTextAlignment="End" Margin="5,0,5,0">
             </Picker>
             <VerticalStackLayout Grid.Row="19" Grid.Column="3" Grid.RowSpan="2">
