Icons' improvement. Update of NuGet packages
Saving and Reading external files in Android: fixed and WORKING in download folder
UI:
  minimal changes to some pages
  Changed the direction of the arrow in a couple icons.
Analysed the differences between the legacy version of database and current,
Transated to English a few comments that were in Italian.

--- a/GlucoMan.Maui/AppShell.xaml
+++ b/GlucoMan.Maui/AppShell.xaml
@@ -6,7 +6,16 @@
     xmlns:local="clr-namespace:GlucoMan.Maui"
     Shell.FlyoutBehavior="Disabled"
     Title="GlucoMan: Glucose Manager">
-<!-- !!!! TODO enable the flyout and modify navigation-->
+    <Shell.TitleView>
+        <Grid HeightRequest="27" VerticalOptions="Center">
+            <Label Text="GlucoMan: Glucose Manager"
+                   FontSize="Medium"
+                   VerticalOptions="Center"
+                   Padding="0"
+                   Margin="0"/>
+        </Grid>
+    </Shell.TitleView>
+    <!-- !!!! TODO enable the flyout and modify navigation-->
     <ShellContent
         Title="GlucoMan: Glucose Manager"
         ContentTemplate="{DataTemplate local:MainPage}"
