--- a/GlucoMan.Maui/MealsPage.xaml
+++ b/GlucoMan.Maui/MealsPage.xaml
@@ -150,9 +150,11 @@
                        HorizontalTextAlignment="Center" VerticalOptions="End" />
                 <Label Grid.Row="0" Grid.Column="3" Text="Accur.%" 
                        HorizontalTextAlignment="Center" VerticalOptions="End" />
-                <ListView Grid.Row="1" Grid.ColumnSpan="4" x:Name="gridMeals" 
-                          ItemsSource="{Binding}"
-                          ItemSelected="OnGridSelectionAsync" >
+                <ListView Grid.Row="1" Grid.ColumnSpan="4" 
+                          x:Name="gridMeals" ItemsSource="{Binding}"
+                          ToolTipProperties.Text="Past meals"
+                          ItemSelected="OnGridSelectionAsync"
+                          RowHeight="22">
                     <!-- data to be shown, in a DataTemplate -->
                     <ListView.ItemTemplate>
                         <DataTemplate>
